<resources>
    <string name="app_name">ZadDom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tytul">Tytuł</string>
    <string name="gatunek">Gatunek</string>
    <string name="scenariusz">Scenariusz</string>
    <string name="rezyseria">Reżyseria</string>
    <string name="add">add</string>
    <string name="delete_question">Delete film?</string>
    <string name="dialog_confirm">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_dialog_tag">delete_dialog_tag</string>
    <string name="call_question">Call</string>
    <string name="call_dialog_tag">call_dialog_tag</string>
    <string name="dialog_call">Call</string>
    <string name="puste_pole">Uzupełnij!</string>
    <string name="format_data">Prawidłowy format: dd/mm/rrrr</string>
    <string name="format_numer">Podaj 9 cyfr</string>
    <string name="za_duza_wartosc">Nieprawidłowe dane</string>
    <string name="premiera">Premiera</string>
    <string name="czas_trwania">Czas trwania</string>
    <string name="save">save</string>
</resources>
